# invisible-mechanics-application-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 20260530_0001_initial.py  20260530_0002_email_log.py  20260530_0003_class_metadata.py  20260530_0004_cohort_metadata.py  20260530_0005_payments.py  20260530_0006_unique_active_entitlement.py  20260603_0007_recorded_classes.py  20260603_0008_auth_tokens.py  20260604_0009_cloudflare_stream_live.py  20260604_0010_unify_classes_lectures.py  20260605_0011_recorded_lecture_table.py  20260605_0012_drop_class_source_kind.py  20260618_0026_database_compatibility_stamp.py  20260623_0027_repair_live_schema.py  20260623_0028_sms_otp_auth.py  20260625_0029_payment_events_recorded_lecture_scope.py  20260625_0030_user_profile_consent.py  (+1 more)
app/: auth.py  config.py  db.py  main.py  schemas.py
scripts/: check_schema.py  e2e_recorded.py  measure_http.py  smoke_api_endpoints.py  smoke_auth_request.py
tests/: conftest.py  test_admin_cohorts.py  test_admin_create_class.py  test_admin_edit_delete_class.py  test_admin_recorded_lecture.py  test_admin_users.py  test_auth_login.py  test_buy_class.py  test_buy_recorded_lecture.py  test_cron_reminders.py  test_enroll_order.py  test_enroll_seatcap.py  test_enroll_verify.py  test_entitlement_uniqueness.py  test_join_class.py  test_masterclass_tracking.py  test_me_entitlements.py  test_recorded_lecture_playback.py  test_recordings.py  test_stream_webhook.py  test_webhook.py
(+38 files in other folders)
